[RERE] fix something

--- a/src/main/webapp/WEB-INF/properties/dynamo-default.properties
+++ b/src/main/webapp/WEB-INF/properties/dynamo-default.properties
@@ -28,6 +28,6 @@
 
 # dynamodb option
 dynamodb.url=dynamodb.ap-northeast-1.amazonaws.com
-dynamodb.accessKey=AKIAIAHNHJG3CYQ4YD5A
-dynamodb.secretKey=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
+dynamodb.accessKey=
+dynamodb.secretKey=
 dynamodb.tablePrefix=DATA
